--- a/1.html
+++ b/1.html
@@ -3,6 +3,7 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S4DY53EB2J"></script>
 <script>
@@ -15,6 +16,7 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
@@ -28,6 +30,7 @@
     <li><a href="3.html"><font color="red">JavaScript</font></a></li>
   </ol>
 -->
+  <div id="article">
   <h2>HTML</h2>
   <p>
     <iframe width="956" height="538" src="https://www.youtube.com/embed/7T7r_oSp0SE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -50,6 +53,8 @@
     items. HTML elements are delineated by tags, written using angle
     brackets.
   </p>
+  </div>
+</div>
   <p>
     <div id="disqus_thread"></div>
 <script>
